# pict-camera

./: .gitignore  CMakeLists.txt
append/: bitmap_to_array.py  image_data_sample.c  image_to_array.py  misaki_font.h  misaki_font_sample.c
main/: CMakeLists.txt  PimoroniEncoder.cpp  PimoroniEncoder.h  PixelArtProcessor.cpp  PixelArtProcessor.h  camera_utils.cpp  camera_utils.h  idf_component.yml  image_logo.h  main.cpp  misaki_font.h  pimoroni_encoder.cpp  pimoroni_encoder.h  ssd1306_display.cpp  ssd1306_display.h  terminal.cpp  terminal.h
